--- a/public/css/national_parks_css.css
+++ b/public/css/national_parks_css.css
@@ -8,3 +8,26 @@ h1 {
     font-size: 4rem;
     font-family: Signika, "Arial Black";
 }
+
+table {
+    width: 100%;
+}
+
+#heading {
+
+} 
+
+.park_row {
+    height: 100px;
+    border: 0px;
+    border-collapse: collapse;
+}
+
+th {
+    text-align: left;
+    padding-left: 1.5rem;
+}
+
+td {
+    padding-left: 1.5rem;
+}
