--- a/public/css/national_parks_css.css
+++ b/public/css/national_parks_css.css
@@ -7,6 +7,8 @@ h1 {
     text-align: center;
     font-size: 4rem;
     font-family: Signika, "Arial Black";
+    color: #A8A6A6;
+    text-shadow: 2px 2px #424242;
 }
 
 .previous_next {
@@ -25,13 +27,20 @@ h1 {
     /*clear: both;*/
     display: inline-block;
     width: 28%;
+    padding-left: 10px;
+}
+
+.park_entries {
+    margin-bottom: 10px;
     height: 300px;
+    /*background-color: #C1983D;*/
+    background-color: #A8A6A6;
+    box-shadow: 2px 2px #424242;
 }
 
 .park_img {
     width: 68%;
     float: right; 
-    height: 300px;
 }
 
 .park_img img {
