--- a/public/css/national_parks_css.css
+++ b/public/css/national_parks_css.css
@@ -37,12 +37,13 @@ h1 {
     height: 300px;
     /*background-color: #C1983D;*/
     background-color: #A8A6A6;
+    position: relative;
     box-shadow: 2px 2px #424242;
 }
 
 .park_img {
     width: 68%;
-    float: right; 
+    float: right;
 }
 
 .park_img img {
@@ -56,6 +57,17 @@ form {
     padding-left: 10px;
     box-shadow: 2px 2px #424242;
 }
+
+.no_image {
+    padding-left: 10%;
+    color: #424242;
+    text-shadow: 0px 0px;
+    font-size: 3rem;
+    position: absolute;
+    top: 40%;
+    transform: translate(0, -50%);
+}
+
 
 /*If I use a table for the output*/
 /*table {
